--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
   </head>
   <body>
     <header>
+      <!-- NAV BAR SECTION -->
       <nav class="bg-white">
         <div
-          class="flex flex-col gap-6 md:flex md:flex-row md:justify-between items-center md:px-4 px-[60px] py-6"
+          class="flex flex-col gap-6 md:flex md:flex-row md:justify-between items-center px-4 md:px-[60px] py-6"
         >
           <div>
-            <div class="logo flex justify-center items-center gap-3">
+            <div
+              class="logo flex justify-center md:justify-start items-center gap-3"
+            >
               <img class="w-[25%] md:w-[18%]" src="./assets/logo.png" alt="" />
               <h1 class="text-3xl md:text-4xl text-[#006747] font-extrabold">
                 Emergency <br />
@@ -66,6 +69,22 @@
           </div>
         </div>
       </nav>
+      <section
+        class="banner bg-[linear-gradient(to_right,#013223_0%,#006747_50%,#013223_100%)]"
+      >
+        <div
+          class="flex flex-col text-center md:items-center gap-3 py-4 px-4 md:px-[60px]"
+        >
+          <img class="w-[100px] mx-auto" src="./assets/logo-dark.png" alt="" />
+          <h1 class="text-[40px] font-bold text-white hind">
+            Emergency Service Directory
+          </h1>
+          <p class="text-[20px] font-semibold text-white hind">
+            Government Emergency Services at Your Fingertip – A Project by
+            Government of the People’s Republic of Bangladesh
+          </p>
+        </div>
+      </section>
     </header>
 
     <!-- linked JavaScript Files -->
