added the card section and call history section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,324 @@
         </div>
       </section>
     </header>
+    <main>
+      <div class="flex gap-[30px] px-[60px] pt-[60px] pb-[90px] bg-[#F5FFF6]">
+        <div class="min-h-44 w-[75%] grid grid-cols-3 gap-[30px]">
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/emergency.png" alt="" />
+              </div>
+              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">
+                National Emergency Number
+              </h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                National Emergency
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >All</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="w-[25%] bg-white rounded-xl shadow-md">
+          <div class="flex justify-between items-center p-6 mb-4">
+            <div class="history-description flex items-center gap-2">
+              <i class="fa-regular fa-clock text-[#5C5C5C]"></i>
+              <h3 class="roboto text-[20px] font-medium">Call History</h3>
+            </div>
+            <div class="history-btn">
+              <button
+                class="btn px-6 py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none"
+              >
+                Clear
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- linked JavaScript Files -->
     <script src="./js/script.js"></script>
