fixed all the images and text in card section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
               <h2 class="text-[24px] font-bold hind">
@@ -125,21 +127,87 @@
           <div class="bg-white p-8 rounded-xl shadow-md">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
-                <img src="./assets/emergency.png" alt="" />
+                <img src="./assets/police.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
+              <h2 class="text-[24px] font-bold hind">Police Helpline Number</h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Police
               </p>
               <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >Police</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/fire-service.png" alt="" />
+              </div>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">Fire Service Number</h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                Fire Service
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >Fire</span
+              >
+            </div>
+            <div class="card-btn flex gap-2 items-center">
+              <button
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+              >
+                <i class="fa-regular fa-copy"></i>Copy
+              </button>
+              <button
+                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+              >
+                <i class="fa-solid fa-phone"></i>Call
+              </button>
+            </div>
+          </div>
+          <div class="bg-white p-8 rounded-xl shadow-md">
+            <div class="main-icon flex justify-between items-center mb-4">
+              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
+                <img src="./assets/ambulance.png" alt="" />
+              </div>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
+            </div>
+            <div class="card-description mb-6">
+              <h2 class="text-[24px] font-bold hind">Ambulance Service</h2>
+              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
+                Ambulance
+              </p>
+              <h3 class="text-[32px] font-bold roboto mb-2">1994-999999</h3>
+              <span
+                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
+                >Health</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
@@ -160,19 +228,19 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
+              <h2 class="text-[24px] font-bold hind">Women & Child Helpline</h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Women & Child Helpline
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[32px] font-bold roboto mb-2">109</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >Help</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
@@ -193,19 +261,21 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
               <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
+                Anti-Corruption Helpline
               </h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Anti-Corruption
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[32px] font-bold roboto mb-2">106</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >Govt.</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
@@ -226,19 +296,19 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
+              <h2 class="text-[24px] font-bold hind">Electricity Helpline</h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Electricity Outage
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[32px] font-bold roboto mb-2">16216</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >Electricity</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
@@ -259,19 +329,19 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
+              <h2 class="text-[24px] font-bold hind">Brac Helpline</h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Brac
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[32px] font-bold roboto mb-2">16445</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >NGO</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
@@ -292,85 +362,21 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              <button>
+                <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
+              </button>
             </div>
             <div class="card-description mb-6">
               <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
+                Bangladesh Railway Helpline
               </h2>
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
+                Bangladesh Railway
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[32px] font-bold roboto mb-2">163</h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
-              >
-            </div>
-            <div class="card-btn flex gap-2 items-center">
-              <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
-              >
-                <i class="fa-regular fa-copy"></i>Copy
-              </button>
-              <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
-              >
-                <i class="fa-solid fa-phone"></i>Call
-              </button>
-            </div>
-          </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
-            <div class="main-icon flex justify-between items-center mb-4">
-              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
-                <img src="./assets/emergency.png" alt="" />
-              </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
-            </div>
-            <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
-              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
-              </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
-              <span
-                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
-              >
-            </div>
-            <div class="card-btn flex gap-2 items-center">
-              <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
-              >
-                <i class="fa-regular fa-copy"></i>Copy
-              </button>
-              <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
-              >
-                <i class="fa-solid fa-phone"></i>Call
-              </button>
-            </div>
-          </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
-            <div class="main-icon flex justify-between items-center mb-4">
-              <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
-                <img src="./assets/emergency.png" alt="" />
-              </div>
-              <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
-            </div>
-            <div class="card-description mb-6">
-              <h2 class="text-[24px] font-bold hind">
-                National Emergency Number
-              </h2>
-              <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
-                National Emergency
-              </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
-              <span
-                class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
-                >All</span
+                >Travel</span
               >
             </div>
             <div class="card-btn flex gap-2 items-center">
