added responsive on card section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
       </section>
     </header>
     <main>
-      <div class="flex gap-[30px] px-[60px] pt-[60px] pb-[90px] bg-[#F5FFF6]">
-        <div class="min-h-44 w-[75%] grid grid-cols-3 gap-[30px]">
+      <div
+        class="flex flex-col md:flex md:flex-row gap-2 md:gap-[30px] px-2 md:px-[60px] pt-[60px] pb-[90px] bg-[#F5FFF6]"
+      >
+        <div
+          class="md:w-[75%] grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-[30px]"
+        >
           <div class="bg-white p-8 rounded-xl shadow-md">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
@@ -111,7 +115,7 @@
                 >All</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -144,7 +148,7 @@
                 >Police</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -177,7 +181,7 @@
                 >Fire</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -210,7 +214,7 @@
                 >Health</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -243,7 +247,7 @@
                 >Help</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -278,7 +282,7 @@
                 >Govt.</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -311,7 +315,7 @@
                 >Electricity</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -344,7 +348,7 @@
                 >NGO</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -379,7 +383,7 @@
                 >Travel</span
               >
             </div>
-            <div class="card-btn flex gap-2 items-center">
+            <div class="card-btn flex flex-col md:flex gap-2 items-center">
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -393,7 +397,7 @@
             </div>
           </div>
         </div>
-        <div class="w-[25%] bg-white rounded-xl shadow-md">
+        <div class="w-full md:w-[25%] bg-white rounded-xl shadow-md">
           <div class="flex justify-between items-center p-6 mb-4">
             <div class="history-description flex items-center gap-2">
               <i class="fa-regular fa-clock text-[#5C5C5C]"></i>
