--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div
               class="heart flex items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
             >
-              <span class="text-[16px] font-black">0</span>
+              <span id="heart-Total" class="text-[16px] font-black">0</span>
               <img class="w-[25%]" src="./assets/heart.png" alt="" />
             </div>
             <div
@@ -98,7 +98,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -115,7 +115,9 @@
                 >All</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -133,7 +135,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/police.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -148,7 +150,9 @@
                 >Police</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -166,7 +170,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/fire-service.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -181,7 +185,9 @@
                 >Fire</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -199,7 +205,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/ambulance.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -214,7 +220,9 @@
                 >Health</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -232,7 +240,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -247,7 +255,9 @@
                 >Help</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -265,7 +275,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -282,7 +292,9 @@
                 >Govt.</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -300,7 +312,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -315,7 +327,9 @@
                 >Electricity</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -333,7 +347,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -348,7 +362,9 @@
                 >NGO</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
@@ -366,7 +382,7 @@
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
               </div>
-              <button>
+              <button class="small-heart-btn">
                 <i class="fa-regular fa-heart text-[#5C5C5C] text-[20px]"></i>
               </button>
             </div>
@@ -383,7 +399,9 @@
                 >Travel</span
               >
             </div>
-            <div class="card-btn flex flex-col md:flex gap-2 items-center">
+            <div
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+            >
               <button
                 class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
               >
